<resources>
    <string name="app_name">ResetTrain</string>
    <string name="are_you_sure_message">¿Está seguro?</string>
    <string name="remove_task_message">Eliminar registro</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="register_boton">Insertar</string>
    <string name="cancel_boton">Cancelar</string>
    <string name="lenguajes_boton">Idiomas</string>
    <string name="usuarios">Usuarios</string>
    <string name="rutinas">Rutinas</string>
    <string name="perfiles">Perfiles</string>
    <string name="ritmo_cardiaco">Ritmo</string>
    <string name="medidas">Medidas</string>
    <string name="peso">Peso</string>
    <string name="fecha_medicion">Fecha Medición</string>
    <string name="Obesidad">Obesidad</string>
    <string name="modalidad">Modalidad</string>
    <string name="numero_series">Número de series</string>
    <string name="numero_repes">Número de repeticiones</string>
    <string name="dias_entreno">Días</string>
    <string name="duracion_entreno">Duración del entreno</string>
    <string name="material">Material</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="objetivo">Objetivo</string>
    <string name="contrasena">Contraseña</string>
    <string name="fecha_naci">Fecha Nacimiento</string>
    <string name="email">Email</string>
    <string name="phone">Telefono movil</string>
    <string name="marca_obe">Si apretas el botón de marcar obesidad, ya no la puedes desmarcar</string>
    <string name="marca_material">Si apretas el botón de marcar material, ya no la puedes desmarcar</string>
    <string name="marca_lesionado">Si apretas el botón de marcar lesión, ya no la puedes desmarcar</string>
    <string name="lesionado">Lesionado</string>
    <string name="boton_borrar">Borrar</string>
    <string name="usuario_lesion">Marcar Lesión</string>
    <string name="rutina_material">Marcar Material</string>
    <string name="perfil_obe">Marcar Obesidad</string>
    <string name="boton_detalles">Detalles</string>
    <string name="atras">Atrás</string>
    <string name="ubicacion_boton">Mapa</string>
    <string name="favorito">Favoritos</string>
    <string name="boton_favorito">Marcar Favorito</string>
</resources>