<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_change_language"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lenguajes_boton" />
    <item
        android:id="@+id/mapView"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ubicacion_boton" />
    <item
        android:id="@+id/activity_view_rutina"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/favorito" />
</menu>